--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "hhtp-v0.4",
   "version": "0.1.0",
+  "engines": {
+    "node": "14.x"
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.3",
@@ -9,6 +11,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "eslint-config-standard": "^16.0.3",
+    "heroku": "^7.59.0",
     "nodemailer": "^6.6.5",
     "react": "^17.0.2",
     "react-csv": "^2.0.3",
