--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "hhtp-v0.4",
   "version": "0.1.0",
   "engines": {
-    "node": "14.x"
+    "npm": "6.x",
+    "node": "14.x",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.3",
