--- a/package.json
+++ b/package.json
@@ -1,50 +1,24 @@
 {
   "name": "hhtp-v0.4",
-  "version": "0.1.0",
-  "engines": {
-    "npm": "6.x",
-    "node": "14.x",
-  },
-  "private": true,
+  "version": "1.0.0",
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
   "dependencies": {
-    "@material-ui/core": "^4.12.3",
-    "@mui/material": "^5.0.1",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "eslint-config-standard": "^16.0.3",
     "heroku": "^7.59.0",
-    "nodemailer": "^6.6.5",
-    "react": "^17.0.2",
-    "react-csv": "^2.0.3",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.4",
-    "react-scripts": "4.0.3",
-    "reselect": "^4.0.0",
-    "web-vitals": "^1.0.1"
+    "nodemailer": "^6.6.5"
   },
+  "devDependencies": {},
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/stephanduval/hhtp-v0.4.git"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/stephanduval/hhtp-v0.4/issues"
+  },
+  "homepage": "https://github.com/stephanduval/hhtp-v0.4#readme"
 }
